--- a/FXExperienceControls/src/main/resources/fxml/FXMLDemoPanel.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLDemoPanel.fxml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <SplitPane dividerPositions="0.5" orientation="VERTICAL" styleClass="canned-split-pane" stylesheets="@../styles/dark_theme.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fxexperience.javafx.controller.DemoController">
   <items>
     <AnchorPane maxHeight="200.0">
