--- a/FXExperienceControls/src/main/resources/fxml/FXMLRotatorControl.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLRotatorControl.fxml
@@ -36,11 +36,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-
+<?import javafx.scene.layout.*?>
 <fx:root id="GridPane" hgap="4.0" stylesheets="@../styles/rotator_control.css" type="javafx.scene.layout.GridPane" vgap="0.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <Label fx:id="rotator_label" styleClass="rotation-label" text="Label" GridPane.columnIndex="0" GridPane.rowIndex="0" />
