--- a/FXExperienceControls/src/main/resources/fxml/FXMLSliderControl.fxml
+++ b/FXExperienceControls/src/main/resources/fxml/FXMLSliderControl.fxml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.StackPane?>
-
+<?import javafx.scene.layout.*?>
 <fx:root stylesheets="@../styles/slider_controller.css" type="HBox" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane HBox.hgrow="ALWAYS">
