--- a/FXExperienceTools/src/main/resources/fxml/FXMLPreviewPanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLPreviewPanel.fxml
@@ -39,6 +39,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 <?import javafx.scene.web.HTMLEditor?>
 
 <fx:root id="Preview-area" alignment="CENTER" stylesheets="@../styles/preview.css" type="VBox" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
@@ -65,7 +66,7 @@
       <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0">
         <items>
           <Button mnemonicParsing="false" text="Go" />
-            <TextField alignment="CENTER_RIGHT" prefWidth="100.0" promptText="Enter text" />
+            <TextField alignment="CENTER_RIGHT" prefWidth="160.0" text="Never odd or even" />
             <Label text="Search" />
             <Separator orientation="VERTICAL" prefHeight="40.0" prefWidth="0.0" />
         </items>
@@ -145,10 +146,21 @@
                               <TextArea id="textArea1" maxWidth="1.7976931348623157E308" prefHeight="60.0" prefWidth="140.0" text="TextArea" wrapText="true" />
                            </children>
                         </VBox>
-                        <VBox GridPane.rowIndex="2">
+                        <VBox spacing="4.0" GridPane.rowIndex="2">
                            <children>
-                              <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Label" />
-                              <Hyperlink id="hyperlink1" alignment="CENTER" maxWidth="1.7976931348623157E308" text="Hyperlink" />
+                              <HBox alignment="CENTER_LEFT">
+                                 <children>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                                       <HBox.margin>
+                                          <Insets left="5.0" />
+                                       </HBox.margin></Text>
+                                 </children>
+                              </HBox>
+                              <Label maxWidth="1.7976931348623157E308" text="Label">
+                                 <VBox.margin>
+                                    <Insets left="5.0" />
+                                 </VBox.margin></Label>
+                              <Hyperlink id="hyperlink1" text="Hyperlink" />
                            </children>
                         </VBox>
                         <ProgressBar prefWidth="200.0" progress="0.75" GridPane.rowIndex="3" />
@@ -198,27 +210,31 @@
                         <VBox alignment="TOP_RIGHT" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="2" GridPane.vgrow="NEVER" />
                         <VBox maxWidth="1.7976931348623157E308" GridPane.columnSpan="2">
                            <children>
-                              <AnchorPane>
+                              <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
                                  <children>
-                                    <ListView prefHeight="220.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0" />
+                                    <ListView maxHeight="1.7976931348623157E308" prefHeight="220.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                  </children>
                               </AnchorPane>
                            </children>
                         </VBox>
-                        <ScrollPane hbarPolicy="ALWAYS" vbarPolicy="ALWAYS" GridPane.columnIndex="2" GridPane.columnSpan="2">
-                           <content>
-                              <TableView maxWidth="1.7976931348623157E308" prefHeight="200.0">
-                                <columns>
-                                  <TableColumn prefWidth="134.0" text="C1" />
-                                  <TableColumn prefWidth="109.0" text="C2" />
-                                    <TableColumn prefWidth="148.0" text="Column X" />
-                                    <TableColumn prefWidth="148.0" text="Column X" />
-                                </columns>
-                              </TableView>
-                           </content>
-                        </ScrollPane>
+                        <VBox GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                           <children>
+                              <ScrollPane hbarPolicy="ALWAYS" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" vbarPolicy="ALWAYS" VBox.vgrow="ALWAYS">
+                                 <content>
+                                    <TableView maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0">
+                                      <columns>
+                                        <TableColumn prefWidth="134.0" text="C1" />
+                                        <TableColumn prefWidth="109.0" text="C2" />
+                                          <TableColumn prefWidth="300.0" text="C3" />
+                                          <TableColumn prefWidth="148.0" text="Column X" />
+                                      </columns>
+                                    </TableView>
+                                 </content>
+                              </ScrollPane>
+                           </children>
+                        </VBox>
                         <Pagination pageCount="8" GridPane.columnSpan="4" GridPane.rowIndex="2" />
-                        <HTMLEditor htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body contenteditable=&quot;true&quot;&gt;&lt;/body&gt;Hello World&lt;/html&gt;" maxWidth="1.7976931348623157E308" prefHeight="200.0" GridPane.columnSpan="4" GridPane.rowIndex="1" />
+                        <HTMLEditor htmlText="&lt;html&gt;&lt;head&gt;&lt;/head&gt;&lt;body style=&quot;font-family:verdana; background-color:#2c2f33; color:#D7D7D7;&quot; contenteditable=&quot;true&quot;&gt;&lt;h1&gt; Hello World, I'm an HTML Editor!&lt;/h1&gt;&lt;/body&gt;&lt;/html&gt;" maxWidth="1.7976931348623157E308" prefHeight="340.0" GridPane.columnSpan="4" GridPane.rowIndex="1" />
                      </children>
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="100.0" />
@@ -227,8 +243,8 @@
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="190.0" prefWidth="190.0" />
                      </columnConstraints>
                      <rowConstraints>
-                        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="50.0" vgrow="NEVER" />
-                        <RowConstraints minHeight="50.0" valignment="CENTER" vgrow="NEVER" />
+                        <RowConstraints maxHeight="1.7976931348623157E308" minHeight="50.0" vgrow="ALWAYS" />
+                        <RowConstraints minHeight="50.0" valignment="CENTER" vgrow="ALWAYS" />
                         <RowConstraints minHeight="-Infinity" prefHeight="45.0" valignment="CENTER" vgrow="NEVER" />
                      </rowConstraints>
                      <padding>
